update throwOnCapabilityNotPresent to false by default

--- a/seleniumgrid/hub_config.json
+++ b/seleniumgrid/hub_config.json
@@ -5,7 +5,7 @@
   "servlets": [],
   "prioritizer": null,
   "capabilityMatcher": "org.openqa.grid.internal.utils.DefaultCapabilityMatcher",
-  "throwOnCapabilityNotPresent": true,
+  "throwOnCapabilityNotPresent": false,
   "nodePolling": 5000,
   "cleanUpCycle": 5000,
   "timeout": 300000,
